--- a/SHTimerDemo/Base.lproj/Main.storyboard
+++ b/SHTimerDemo/Base.lproj/Main.storyboard
@@ -1,24 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rRN-BH-Mb5">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="zVU-3M-UzW">
+            <objects>
+                <navigationController id="rRN-BH-Mb5" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LXt-Ld-cOf">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="bro-2u-wE7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3ch-fX-WgC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1228" y="9"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fLQ-3v-LfJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="tA0-Z6-Rct"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gBf-IE-bjL">
+                                <rect key="frame" x="87" y="343.5" width="200" height="44"/>
+                                <state key="normal" title="SHTimer - Scheduled"/>
+                                <connections>
+                                    <action selector="scheduledTimer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="l4J-QZ-l9O"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pme-0o-4yt">
+                                <rect key="frame" x="87.5" y="279.5" width="200" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="aJ4-ZB-5Wa"/>
+                                    <constraint firstAttribute="height" constant="44" id="bTp-6N-xM7"/>
+                                </constraints>
+                                <state key="normal" title="SHTimer - Normal"/>
+                                <connections>
+                                    <action selector="normalTimer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AeH-TD-Hg6"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="Pme-0o-4yt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2xA-Qj-38e"/>
+                            <constraint firstItem="gBf-IE-bjL" firstAttribute="centerX" secondItem="Pme-0o-4yt" secondAttribute="centerX" id="52J-vd-yGc"/>
+                            <constraint firstItem="gBf-IE-bjL" firstAttribute="top" secondItem="Pme-0o-4yt" secondAttribute="bottom" constant="20" id="Crc-uk-hM8"/>
+                            <constraint firstItem="gBf-IE-bjL" firstAttribute="height" secondItem="Pme-0o-4yt" secondAttribute="height" id="IOf-Jn-vU4"/>
+                            <constraint firstItem="gBf-IE-bjL" firstAttribute="width" secondItem="Pme-0o-4yt" secondAttribute="width" id="YuQ-gg-tXy"/>
+                            <constraint firstItem="Pme-0o-4yt" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-32" id="nRU-H7-DZt"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="lxX-oL-A3a"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-559.20000000000005" y="8.5457271364317844"/>
         </scene>
     </scenes>
 </document>
